Scorecard is now functioning

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -126,3 +126,9 @@ th.checker {
 td.checker {
 	text-align: center;
 }
+#graphycontainer {
+	/*width: 500px;*/
+	width: 80%;
+	height: 1000px;
+	padding-left: 30px;
+}
