Scorecard now has targeting options plus we have the about text too

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -55,6 +55,14 @@ body {
 	font-weight: bold;
 	color: #cc0000;
 }
+#ast-ub-subtitle a, #ast-ub-subtitle a:visited {
+	color: #cc0000;
+	text-decoration: none;
+	border-bottom: 1px solid #660000;
+}
+#ast-ub-subtitle a:hover {
+	border-bottom: 1px solid #cc0000;
+}
 #ast-ub-options ul {
 	margin-left: 0;
 	padding-left: 0;
@@ -95,7 +103,7 @@ p.ast-text {
 	padding: 0 0 10px 30px;
 	font-family: 'Arial', sans-serif;
 	font-size: 12px;
-	font-style: italic;
+	font-style: normal;
 }
 p.ast-text a, p.ast-text a:visited {
 	color: black;
@@ -130,5 +138,9 @@ td.checker {
 	/*width: 500px;*/
 	width: 80%;
 	height: 1000px;
-	padding-left: 30px;
+}
+select#targetselectah {
+}
+p.centralise {
+	text-align: center;
 }
