More mongoid config, plus, devise work, custom device c and v. Plus, all the ajaxie stuff for the UI for login, logout, register

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -63,6 +63,12 @@ body {
 #ast-ub-subtitle a:hover {
 	border-bottom: 1px solid #cc0000;
 }
+#ast-ub-options {
+	color: #cc0000;
+	font-family: "Arial";
+	font-size: 12px;
+	font-weight: bold;
+}
 #ast-ub-options ul {
 	margin-left: 0;
 	padding-left: 0;
