--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
 </head>
 <body>
 
+<div id="dialog-notice" style="display: none;" title="Notice">
+	<p class="notice"><%= notice %></p>
+</div>
+<div id="dialog-alert" style="display: none;" title="Alert">
+	<p class="alert"><%= alert %></p>
+</div>
+
 <%= yield %>
 
 </body>
