--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,6 +87,22 @@
 			});
 		});
 
+		if ($('#dialog-popups > p.notice').text().length > 0) {
+			$('#dialog-popups').dialog({
+				resizable: false,
+				height: 240,
+				width: 400,
+				modal: true,
+				buttons: {
+					Ok: function() {
+						$(this).dialog("close");
+					}
+				}
+			});
+		}
+
+		UserDialogSetup(<%= raw @user_status %>);
+
 	});
 </script>
 
@@ -332,10 +348,13 @@
 	</div>		
 </div>
 
-<div id="dialog-confirm" title="<%=t 'dialogtitle' %>">
+<div id="dialog-confirm" title="<%=t 'dialogtitle' %>" style="display: none;">
 	<p><span class="ui-icon ui-icon-alert" style="float:left; margin: 0 7px 20px 0;"></span><%=t 'dialogbody' %></p>
 </div>
 
-<div class="ast-footer">
+<div id="user-dialog" style="display: none;">
+	<p></p>
+</div>
 
+<div class="ast-footer">
 </div>	
