First drop - basic UI functionality in bootstrap now in place

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -2,120 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.jtable td {font-weight: bold;}
-* {
-	margin: 0;
-	padding: 0;
-}
-html {
-	overflow-y: scroll;
-}
-body {
-	margin: 0;
-	padding: 0;
-	min-height: 100%;
+label.checker {
 	text-align: center;
 }
-#wrapper {
-	margin: 0 auto;
-	width: 960px;
-	position: relative;
-	padding: 0;
-}
-.limiter {
-	margin: 0 auto;
-	width: 960px;
-	position: relative;
-	text-align: left;
-}
-#ast-universalbar {
-	background: #000;
-	margin: 0 auto;
-	padding: 0;
-	height: 30px;
-	width: 100%;
+th.checker {
 	text-align: center;
-	min-width: 960px;
 }
-#ast-ub-title {
-	position: absolute;
-	top: 8px;
-	left: 10px;
-	font-family: Arial;
-	font-size: 12px;
-	font-weight: bold;
-	color: #cc0000;
-}
-#ast-ub-subtitle {
-	position: absolute;
-	top: 8px;
-	left: 200px;
-	font-family: Arial;
-	font-size: 12px;
-	font-weight: bold;
-	color: #cc0000;
-}
-#ast-ub-subtitle a, #ast-ub-subtitle a:visited {
-	color: #cc0000;
-	text-decoration: none;
-	border-bottom: 1px solid #660000;
-}
-#ast-ub-subtitle a:hover {
-	border-bottom: 1px solid #cc0000;
-}
-#ast-ub-options {
-	color: #cc0000;
-	font-family: "Arial";
-	font-size: 12px;
-	font-weight: bold;
-}
-#ast-ub-options ul {
-	margin-left: 0;
-	padding-left: 0;
-	display: inline;
-	position: absolute;
-	top: 7px;
-	right: 40px;
-}
-#ast-ub-options li {
-	margin-left: 0;
-	padding: 0 12px;
-	/*border-left: 1px solid white;*/
-	list-style: none;
-	display: inline;
-}
-#ast-ub-options a {
-	color: #cc0000;
-	font-family: "Arial";
-	font-size: 12px;
-	font-weight: bold;
-	border-bottom: 1px solid #660000;
-	text-decoration: none;
-}
-#ast-ub-options a:hover {
-	text-decoration: none;
-	border-bottom: 1px solid #cc0000;
-}
-.star {
-}
-h1.ast-title {
-	font-family: 'Lato', sans-serif;
-	font-style: italic;
-	text-align: left;
-	font-size: 34px;
-	line-height: 60px;
-}
-p.ast-text {
-	padding: 0 0 10px 30px;
-	font-family: 'Arial', sans-serif;
-	font-size: 12px;
-	font-style: normal;
-}
-p.ast-text a, p.ast-text a:visited {
-	color: black;
-}
-p.ast-text a:hover, p.ast-text a:visited:hover {
-	color: #cc0000;
+td.checker {
+	text-align: center;
+	vertical-align: middle;
 }
 th.rating {
 	text-align: center;
@@ -125,28 +20,14 @@ td.rating {
 	text-align: center;
 	font-family: 'Lato', 'Arial', sans-serif;
 	font-style: italic;
+	vertical-align: middle;
 }
-table.jtable {
-	padding-bottom: 30px;
-	width: 99%;
+
+td.question {
+	vertical-align: middle;
 }
-label.checker {
-	padding-left: 8px;
-	text-align: center;
-}
-th.checker {
-	text-align: center;
-}
-td.checker {
-	text-align: center;
-}
-#graphycontainer {
-	/*width: 500px;*/
-	width: 80%;
-	height: 1000px;
-}
-select#targetselectah {
-}
-p.centralise {
-	text-align: center;
+caption {
+	font-size: 20px;
+	font-weight: bolder;
+	padding-bottom: 10px;
 }
