--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
 		<div class="navbar-inner">
 			<a href="#" class="brand">SAMM Self Assessment</a>
 			<ul class="nav">
-				<li><a href="#about" id="aboutclick">About</a></li>
-				<li><a href="#ast" id="astclick">AST</a></li>
+				<li><a href="#about" class="scroll">About</a></li>
+				<li><a href="#ast" class="scroll">AST</a></li>
 				<li><a href="http://labs.asteriskinfosec.com.au">Labs</a></li>
 			</ul>
 			<ul class="nav pull-right">
