--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -621,6 +621,7 @@
 <%= javascript_include_tag "jquery" %>
 <%= javascript_include_tag "bootstrap.min" %>
 <%= javascript_include_tag "highcharts" %>
+<%= javascript_include_tag "ssa" %>
 
 <script>
 
